Fixed center issues with form and submit button, removed block and align codes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,22 +237,15 @@ footer{
 /* Form */
 
 .form-section {
-    clear: left;
     background: #050505;
-    height: 900px;
+    height: 700px;
     width: 100%;
-    display: block;
     text-align: center;
 }
 
-.form-section {
+#form-elements {
     color: white;
-    width: 100%;
-    height: 900px;
-    text-align: center;
     margin: 0 auto;
-    display: inline-block;
-    position: absolute;
 }
 
 label {
@@ -284,11 +277,9 @@ label {
     margin-top: 20px;
     border-radius: 2px;
     padding: 15px 32px;
-    text-align: center;
     font-size: 100%;
     background-color: #ED1C24;
     color: white;
-    display: block;
 }
 
 .submit-button:hover {
